@@ -36,6 +36,7 @@ dist_glassplayer_SOURCES = audiodevicefactory.cpp audiodevicefactory.h\
                            codecfactory.cpp codecfactory.h\
                            conn_xcast.cpp conn_xcast.h\
                            connectorfactory.cpp connectorfactory.h\
+                           dev_file.cpp dev_file.h\
                            dev_stdout.cpp dev_stdout.h\
                            glassplayer.cpp glassplayer.h
 
@@ -51,6 +52,7 @@ nodist_glassplayer_SOURCES = audiodevice.cpp audiodevice.h\
                              moc_codec_null.cpp\
                              moc_conn_xcast.cpp\
                              moc_connector.cpp\
+                             moc_dev_file.cpp\
                              moc_dev_stdout.cpp\
                              moc_glassplayer.cpp\
                              ringbuffer.cpp ringbuffer.h
