@@ -37,4 +37,7 @@
 2016-01-12 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented the '--verbose' option.
 2016-01-12 Fred Gleason <fredg@paravelsystems.com>
-	* Implemented a 'stdout-format=' switch for glassplayer(1).
+	* Implemented a '--stdout-format=' switch for glassplayer(1).
+2016-01-12 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented a FILE audio device in 'src/glassplayer/dst_file.cpp'
+	and 'src/glassplayer/dst_file.h'.
